--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="1div" class="containerMenu">
 
     <div class="patternPic">
-      <div class="line1"><img src="https://github.com/Sillybun-cloud/QuizLexicon.github.io/blob/main/items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="Sillybun-cloud.github.io/QuizLexicon.github.io/items/spiral.svg" style="width: 100%; height: 20px;"></div>
       <div class="line1"><img src="https://github.com/Sillybun-cloud/QuizLexicon.github.io/blob/main/items/spiral.svg" style="width: 100%; height: 20px;"></div>
       <div class="line1"><img src="https://github.com/Sillybun-cloud/QuizLexicon.github.io/blob/main/items/spiral.svg" style="width: 100%; height: 20px;"></div>
       <div class="line1"><img src="https://github.com/Sillybun-cloud/QuizLexicon.github.io/blob/main/items/spiral.svg" style="width: 100%; height: 20px;"></div>
