--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div id="1div" class="containerMenu">
 
     <div class="patternPic">
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
       <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
       <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
       <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="picContainer">
-      <img src="../items/lion.png" style="width: 10vh; height:20%; transform:rotate(-5deg)">
+      <img src="items/lion.png" style="width: 10vh; height:20%; transform:rotate(-5deg)">
       <img src="../items/spiral.svg" style="width: 16vh; filter: invert(36%) sepia(8%) saturate(3184%) hue-rotate(44deg) brightness(93%) contrast(81%); padding-top: 18px;">
       <img src="../items/kitty.png"style="width: 11vh; height:20%; transform:rotate(15deg)">
     </div>
@@ -45,7 +45,7 @@
     </div>
 
     <div class="picContainer">
-      <img src="../items/fox.png" style="width: 10vh; height:10.5vh; transform:rotate(-15deg)" >  
+      <img src="items/fox.png" style="width: 10vh; height:10.5vh; transform:rotate(-15deg)" >  
       <img src="../items/spiral.svg" style="width: 16vh;  filter: invert(36%) sepia(8%) saturate(3184%) hue-rotate(44deg) brightness(93%) contrast(81%); padding-bottom: 80px;">
       <img src="../items/bird.png" style="width: 11vh; height:10.5vh; transform:rotate(15deg)">
     </div>
