--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <div id="1div" class="containerMenu">
 
     <div class="patternPic">
-      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="/items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="/items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="/items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="/items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="/items/spiral.svg" style="width: 100%; height: 20px;"></div>
     </div>
 
     <div class="headContainer">  
