--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="picContainer">
-      <img src="items/lion.png" style="width: 10vh; height:20%; transform:rotate(-5deg)">
+      <img src="https://github.com/Sillybun-cloud/QuizLexicon.github.io/blob/main/items/lion.png?raw=true" style="width: 10vh; height:20%; transform:rotate(-5deg)">
       <img src="../items/spiral.svg" style="width: 16vh; filter: invert(36%) sepia(8%) saturate(3184%) hue-rotate(44deg) brightness(93%) contrast(81%); padding-top: 18px;">
       <img src="../items/kitty.png"style="width: 11vh; height:20%; transform:rotate(15deg)">
     </div>
