--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <div id="1div" class="containerMenu">
 
     <div class="patternPic">
-      <div class="line1"><img src="/items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="/items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="/items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="/items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="/items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
     </div>
 
     <div class="headContainer">  
@@ -23,11 +23,11 @@
     </div>
 
     <div class="patternPic">
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
     </div>
 
     <div class="picContainer">
@@ -46,28 +46,28 @@
 
     <div class="picContainer">
       <img src="items/fox.png" style="width: 10vh; height:10.5vh; transform:rotate(-15deg)" >  
-      <img src="../items/spiral.svg" style="width: 16vh;  filter: invert(36%) sepia(8%) saturate(3184%) hue-rotate(44deg) brightness(93%) contrast(81%); padding-bottom: 80px;">
-      <img src="../items/bird.png" style="width: 11vh; height:10.5vh; transform:rotate(15deg)">
+      <img src="items/spiral.svg" style="width: 16vh;  filter: invert(36%) sepia(8%) saturate(3184%) hue-rotate(44deg) brightness(93%) contrast(81%); padding-bottom: 80px;">
+      <img src="items/bird.png" style="width: 11vh; height:10.5vh; transform:rotate(15deg)">
     </div>
 
     <div class="propetyStart"><button id="next" class="buttonStart propety">В путь!</button></div> 
 
     <div class="patternPic">
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 20px;"></div>
     </div> 
 
   </div>
 
   <div id="2div" class="categorySection hidden">
     <div class="patternPic">
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 50px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 50px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 50px;"></div>
-      <div class="line1"><img src="../items/spiral.svg" style="width: 100%; height: 50px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 50px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 50px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 50px;"></div>
+      <div class="line1"><img src="items/spiral.svg" style="width: 100%; height: 50px;"></div>
     </div>
 
     <div class="headContainer">  
