--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <button id="showAnswerArt" class="button hide">Показать результат</button>
   </div>
   <div class="conteinerPlease">
-    <p>Откройте меня пожалуйста на вашем мобильном устройстве</p>
+    <div class="text">Откройте меня пожалуйста на вашем мобильном устройстве</div>
     <img src="items/pleaseIcon.png" style="margin: 3vh;  width: 8vh; height: 8vh;">
   </div>
   
