--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <img src="items/pleaseIcon.png" style="margin: 3vh;  width: 8vh; height: 8vh;">
   </div>
   
-  <div class="infoAbout"><img src="https://github.com/Sillybun-cloud/QuizLexicon.github.io/blob/main/fon/banner.png?raw=true" style="width: 100%; height: auto; object-fit: fill;"></div>
+  <div class="infoAbout"><img src="https://github.com/Sillybun-cloud/QuizLexicon.github.io/blob/main/fon/InfoText.png?raw=true" style="width: 100%; height: auto; object-fit: fill;"></div>
   <script src="script.js"></script>
 </body>
 </html>
