--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
     <button id="retryArt" class="button hide">Снова</button>
     <button id="showAnswerArt" class="button hide">Показать результат</button>
   </div>
-  <div class="conteinerPlease">
+  <!-- <div class="conteinerPlease">
     <div class="text">Откройте меня пожалуйста на вашем мобильном устройстве</div>
     <img src="items/pleaseIcon.png" style="margin: 3vh;  width: 8vh; height: 8vh;">
-  </div>
+  </div> -->
   
   <div class="infoAbout"><img src="https://github.com/Sillybun-cloud/QuizLexicon.github.io/blob/main/fon/InfoText.png?raw=true" style="width: 100%; height: auto; object-fit: fill;"></div>
   <script src="script.js"></script>
