--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
   </div> -->
   
   <div class="infoAbout"><img src="https://github.com/Sillybun-cloud/QuizLexicon.github.io/blob/main/fon/InfoText.png?raw=true" style="width: 100%; height: auto; object-fit: fill;"></div>
+  <div class="infoAbout1024px"><img src="https://github.com/Sillybun-cloud/QuizLexicon.github.io/blob/main/fon/InfoText.png?raw=true" style="width: 100%; height: 35vh; object-fit: cover;"></div>
   <script src="script.js"></script>
 </body>
 </html>
